--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -15,9 +15,10 @@ body {
 header {
 	height: 160px;
 	padding: 24px;
-	background-color: #9e9e9e;
+	background-color: #000;
 	text-align: center;
 }
+
 header img {
 	height: 100%;
 	margin: auto;
@@ -40,20 +41,18 @@ nav {
 	height: 100%;
 	background-color: #ff9900;
 }
+
 nav > a {
 	display: block;
 	height: 60px;
 	padding: 20px;
-	border-bottom: 1px solid #000;
-	color: #000;
-	font-weight: bold;
-	text-decoration: none;
-	text-transform: uppercase;
-	cursor: pointer;
+	color: #fff;
 }
+
 nav > a:hover {
-	box-shadow: 0 0 8px #000;
-	background-color: #00b050; 
+	background-color: #000;
+	border-left: 5px solid #fff;
+	text-decoration: none !important;
 }
 
 nav > a:active {
@@ -123,7 +122,7 @@ section {
 	width: 85%;
 	height: 100%;
 	padding: 16px;
-	background-color: white;
+	background-color: #ff990047;
 	overflow-y: scroll;
 }
 
@@ -176,6 +175,21 @@ a:hover {
 	box-shadow: inset 0 0 6px #000;
 }
 
+/* ------------------------------------ TABLE ------------------------------------ */
+thead tr, th {
+    background-color: #01b050;
+    color: #fff;
+    font-weight: bold;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #fff;
+}
+
+td, th {
+    padding: 5px 10px;
+}
+
 /* ------------------------------------ FORM INPUT ------------------------------------ */
 input[type="text"], input[type="password"], input[type="date"], select {
 	width: 100%;
@@ -204,4 +218,18 @@ input:not([type=date]):invalid:not(:placeholder-shown):not(:focus) {
 	border: 3px solid #d00 !important;
 	color: #d00 !important;
 	background-color: #ffcbcb;
+}
+
+input[name=username], input[name=cf], input[type=password] {
+    background-size: auto 20px;
+    background-position: 10px center;
+    background-repeat: no-repeat;
+}
+
+input[name=username], input[name=cf] {
+    background-image: url('../media/user.png') !important;
+}
+
+input[type=password] {
+    background-image: url('../media/key.png') !important;
 }
