Added login and registration form validation to master

--- a/4doctors/src/main/webapp/css/login-registration-style.css
+++ b/4doctors/src/main/webapp/css/login-registration-style.css
@@ -40,6 +40,19 @@ body {
 	margin: 15px 0;
 }
 
+.form-box .error {
+	color: #d00;
+	font-weight: bold;
+}
+
+.form-box #password_strength {
+	width: 100%;
+	max-width: 300px;
+	padding: 7px;
+	margin: 10px auto;
+	border: none;
+}
+
 @media only screen and (max-width: 600px) {
 
     .form-box {
