--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -191,7 +191,7 @@ td, th {
 }
 
 /* ------------------------------------ FORM INPUT ------------------------------------ */
-input[type="text"], input[type="password"], input[type="date"], select {
+input[type="text"], input[type="password"], input[type="date"], input[type="email"], select {
 	width: 100%;
 	max-width: 300px;
 	height: 40px;
@@ -203,18 +203,18 @@ input[type="text"], input[type="password"], input[type="date"], select {
 	color: #444;
 }
 
-input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, select:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="email"]:focus, select:focus {
 	outline: none;
     border: 3px solid #01b050;
     padding: 4px 4px 4px 40px;
     color: #01b050;
 }
 
-input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, select:focus::placeholder {
+input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, input[type="email"]:focus::placeholder, select:focus::placeholder {
 	color: #01b050;
 }
 
-input:not([type=date]):invalid:not(:placeholder-shown):not(:focus) {
+input:not([type=date]):invalid:not(:placeholder-shown):not(:focus), input.invalid {
 	border: 3px solid #d00 !important;
 	color: #d00 !important;
 	background-color: #ffcbcb;
