--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -1,3 +1,10 @@
+:root {
+    --main-green: #01b050;
+    --main-yellow: #ff9900;
+    --error-red: #d00;
+    --error-red-light: #ff8080;
+}
+
 * {
 	font-family: Arial, sans-serif !important;
 	color: #444;
@@ -39,7 +46,7 @@ header img {
 nav {
 	width: 15%;
 	height: 100%;
-	background-color: #ff9900;
+	background-color: var(--main-yellow);
 }
 
 nav > a {
@@ -142,11 +149,11 @@ footer p {
 /* -------------------------------------- LINKS --------------------------------------- */
 a {
 	font-weight: bold;
-	color: #ff9900;
+	color: var(--main-yellow);
 }
 
 a:hover {
-	color: #ff9900;
+	color: var(--main-yellow);
 	text-decoration: underline;
 }
 
@@ -157,7 +164,7 @@ a:hover {
 	padding: 9px 24px;
 	border: none;
 	border-radius: 50px;
-	background-color: #01b050;
+	background-color: var(--main-green);
 	letter-spacing: 0.04em;
 	text-align: center;
 	font-weight: bold;
@@ -168,7 +175,7 @@ a:hover {
 }
 
 .button:hover, button:hover, input[type=submit]:hover, input[type=reset]:hover {
-	background-color: #ff9900;
+	background-color: var(--main-yellow);
 }
 
 .button:active, button:active, input[type=submit]:active, input[type=reset]:active {
@@ -177,7 +184,7 @@ a:hover {
 
 /* ------------------------------------ TABLE ------------------------------------ */
 thead tr, th {
-    background-color: #01b050;
+    background-color: var(--main-green);
     color: #fff;
     font-weight: bold;
 }
@@ -205,19 +212,19 @@ input[type="text"], input[type="password"], input[type="date"], input[type="emai
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="email"]:focus, select:focus {
 	outline: none;
-    border: 3px solid #01b050;
+    border: 3px solid var(--main-green);
     padding: 4px 4px 4px 40px;
-    color: #01b050;
+    color: var(--main-green);
 }
 
 input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, input[type="email"]:focus::placeholder, select:focus::placeholder {
-	color: #01b050;
+	color: var(--main-green);
 }
 
 input:not([type=date]):invalid:not(:placeholder-shown):not(:focus), input.invalid {
-	border: 3px solid #d00 !important;
-	color: #d00 !important;
-	background-color: #ffcbcb;
+	border: 3px solid var(--error-red) !important;
+	color: var(--error-red) !important;
+	background-color: /*#ffcbcbvar*/var(--error-red-light);
 }
 
 input[name=username], input[name=cf], input[type=password] {
