--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -56,15 +56,17 @@ nav > a {
 	color: #fff;
 }
 
-nav > a:hover {
+nav > a:hover, nav > a.selected {
 	background-color: #000;
 	border-left: 5px solid #fff;
 	text-decoration: none !important;
+	color: var(--main-yellow);
 }
 
 nav > a:active {
-	box-shadow: inset 0 0 8px #000;
-	background-color: #00b050; 
+	/*box-shadow: inset 0 0 8px #000;
+	background-color: #00b050; */
+	color: #fff !important;
 }
 
 #toggle-menu-button {
@@ -130,7 +132,7 @@ section {
 	height: 100%;
 	padding: 30px 50px 30px 50px;
 	background-color: #ff990047;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 /* -------------------------------------- FOOTER -------------------------------------- */
@@ -170,6 +172,7 @@ a:hover {
 	font-weight: bold;
 	color: #fff;
 	text-transform: uppercase;
+	outline: none !important;
 	cursor: pointer;
 	transition: background-color 0.3s ease-in-out;
 }
