--- a/4doctors/src/main/webapp/css/profile-style.css
+++ b/4doctors/src/main/webapp/css/profile-style.css
@@ -1,6 +1,4 @@
-@import "main-style.css";
-
-h3 {
+.personal-info h3 {
     color: var(--main-green);
     width: 80%;
     text-transform: uppercase;
@@ -8,7 +6,7 @@ h3 {
     letter-spacing: 0.1em;
 }
 
-p {
+.personal-info p {
     border-width: 1px; /* thickness of border line*/
     border-style: solid; /* type of border line*/
     border-color: var(--main-yellow);
@@ -22,24 +20,24 @@ p {
 }
 
 
-a.button{
+.personal-info a.button{
     border: none;
     font-weight: normal;
 }
 
-.btn {
-    margin-top:  7px;
-    margin-right: 0;
-    text-transform: uppercase;
-    font-size: 1em;
-    border: none;
-    padding: 0px;
-    margin: 0px;
-    color: var(--main-green);
-}
+/*.btn {*/
+/*    margin-top:  7px;*/
+/*    margin-right: 0;*/
+/*    text-transform: uppercase;*/
+/*    font-size: 1em;*/
+/*    border: none;*/
+/*    padding: 0px;*/
+/*    margin: 0px;*/
+/*    color: var(--main-green);*/
+/*}*/
 
 .pinfo-block {
-    display:flex;
+    /*display:flex;*/
     justify-content:space-between;
     /*outline: 2px dashed blue;*/
 }
@@ -49,4 +47,3 @@ a.button{
     border-radius: 100%;
     display: block;
 }
-
