--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -1,6 +1,8 @@
 :root {
-    --main-green: #01b050;
-    --main-yellow: #ff9900;
+    --main-dark: #002060;
+    --main-red: #f06374;
+	--light-gray: rgb( 245, 245, 245);
+	--green: #aefbc0;
     --error-red: #d00;
     --error-red-light: #ff8080;
 }
@@ -22,7 +24,7 @@ body {
 header {
 	height: 160px;
 	padding: 24px;
-	background-color: #000;
+	background-color: #fff;
 	text-align: center;
 }
 
@@ -46,7 +48,7 @@ header img {
 nav {
 	width: 15%;
 	height: 100%;
-	background-color: var(--main-yellow);
+	background-color: var(--main-dark);
 }
 
 nav > a {
@@ -60,7 +62,7 @@ nav > a:hover, nav > a.selected {
 	background-color: #000;
 	border-left: 5px solid #fff;
 	text-decoration: none !important;
-	color: var(--main-yellow);
+	color: var(--main-red);
 }
 
 nav > a:active {
@@ -76,6 +78,7 @@ nav > a:active {
 	height: 22px;
 	margin: 14px 25px;
 	cursor: pointer;
+	background-color: var(--main-dark);
 }
 
 #toggle-menu-button > span {
@@ -132,7 +135,7 @@ section {
 	width: 85%;
 	height: 100%;
 	padding: 30px 50px 30px 50px;
-	background-color: #ff990047;
+	background-color: #fff;
 	overflow-y: auto;
 }
 
@@ -152,11 +155,11 @@ footer p {
 /* -------------------------------------- LINKS --------------------------------------- */
 a {
 	font-weight: bold;
-	color: var(--main-yellow);
+	color: var(--main-red);
 }
 
 a:hover {
-	color: var(--main-yellow);
+	color: var(--main-dark);
 	text-decoration: underline;
 }
 
@@ -166,11 +169,11 @@ a:hover {
 	margin: 5px;
 	padding: 9px 24px;
 	border: none;
-	border-radius: 50px;
-	background-color: var(--main-green);
+	border-radius: 15px;
+	background-color: var(--main-red);
 	letter-spacing: 0.04em;
 	text-align: center;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	color: #fff;
 	text-transform: uppercase;
 	outline: none !important;
@@ -178,9 +181,9 @@ a:hover {
 	transition: background-color 0.3s ease-in-out;
 }
 
-.button:hover, button:hover, input[type=submit]:hover, input[type=reset]:hover {
-	background-color: var(--main-yellow);
-}
+/*.button:hover, button:hover, input[type=submit]:hover, input[type=reset]:hover {*/
+/*	background-color: var(--main-yellow);*/
+/*}*/
 
 .button:active, button:active, input[type=submit]:active, input[type=reset]:active {
 	box-shadow: inset 0 0 6px #000;
@@ -188,7 +191,7 @@ a:hover {
 
 /* ------------------------------------ TABLE ------------------------------------ */
 thead tr, th {
-    background-color: var(--main-green);
+    background-color: var(--main-red);
     color: #fff;
     font-weight: bold;
 }
@@ -206,24 +209,24 @@ input[type="text"], input[type="password"], input[type="date"], input[type="emai
 	width: 100%;
 	max-width: 300px;
 	height: 40px;
-	padding: 7px;
-	padding-left: 40px;
+	padding: 7px 7px 7px 40px;
 	margin: 10px auto;
 	border: none;
 	border-radius: 50px;
 	color: #444;
+	background-color: var(--light-gray);
 }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="email"]:focus, select:focus {
 	outline: none;
-    border: 3px solid var(--main-green);
+    border: 3px solid var(--green);
     padding: 4px 4px 4px 40px;
-    color: var(--main-green);
+    color: var(--main-dark);
 }
 
-input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, input[type="email"]:focus::placeholder, select:focus::placeholder {
-	color: var(--main-green);
-}
+/*input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, input[type="email"]:focus::placeholder, select:focus::placeholder {*/
+/*	color: var(--main-green);*/
+/*}*/
 
 input:not([type=date]):invalid:not(:placeholder-shown):not(:focus), input.invalid {
 	border: 3px solid var(--error-red) !important;
