Updated admin tables style

--- a/4doctors/src/main/webapp/css/admin-add-doctor-style.css
+++ b/4doctors/src/main/webapp/css/admin-add-doctor-style.css
@@ -48,6 +48,10 @@
     border: none;
 }
 
+.form-box #add_doctor_message {
+    margin-top: 20px;
+}
+
 @media only screen and (max-width: 600px) {
 
     .form-box {
