--- a/4doctors/src/main/webapp/css/admin-homepage-style.css
+++ b/4doctors/src/main/webapp/css/admin-homepage-style.css
@@ -13,3 +13,15 @@ p.table_message {
     font-size: 25px;
     margin: 20px 20px 20px 0px;
 }
+
+tbody tr {
+    background-color: transparent !important;
+}
+
+tbody tr.info_row {
+    background-color: #ff990050 !important;
+}
+
+th, td {
+    border: 1px solid black;
+}
