--- a/4doctors/src/main/webapp/css/admin-add-doctor-style.css
+++ b/4doctors/src/main/webapp/css/admin-add-doctor-style.css
@@ -9,7 +9,7 @@
     margin: auto;
     padding: 25px;
     border-radius: 30px;
-    box-shadow: 12px 6px 13px 0px #000;
+    box-shadow: 2px 2px 6px #8a8a8a;
     background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
