--- a/4doctors/src/main/webapp/css/login-registration-style.css
+++ b/4doctors/src/main/webapp/css/login-registration-style.css
@@ -1,26 +1,17 @@
 :root {
 	--main-dark: #002060;
 	--main-red: #f06374;
-}
-
-* {
-	color: var(--main-dark);
+	--main-gray: #e5e5e5;
 }
 
 body {
 	display: flex;
-	/*background: linear-gradient(-45deg, rgba(255,153,0,1) 0%, rgba(255,255,255,1) 50%, rgba(255,153,0,1) 100%);*/
-	/*background-color: var(--main-dark);*/
-	background-color: #fff;
-	background-image: url("../media/Medek-Team-Doctor.png");
+	position: relative;
+	background-color: var(--light-gray);
+	/*background-image: url("../media/Medek-Team-Doctor.png");*/
 	background-repeat: no-repeat;
 	background-size: cover;
-	position: relative;
-	/*	background-size: 1500px;*/
-	/*	background-position: right bottom;*/
-	/*}*/
 }
-
 
 /* Place text in the middle of the image */
 .hero-text {
@@ -37,54 +28,17 @@ body {
 	margin: 10px 20px 30px;
 }
 
-.button, button, input[type=submit], input[type=reset] {
-	/*min-width: 150px;*/
-	width: 100%;
-	margin: 0px;
-	/*padding: 9px 24px;*/
-	/*border: none;*/
-	/*border-radius: 15px;*/
-	/*background-color: var(--main-red);*/
-	/*letter-spacing: 0.04em;*/
-	/*text-align: center;*/
-	/*!*font-weight: bold;*!*/
-	/*color: #fff;*/
-	/*text-transform: uppercase;*/
-	/*outline: none !important;*/
-	/*cursor: pointer;*/
-	/*transition: background-color 0.3s ease-in-out;*/
-}
-
 .form-box {
 	width: 100%;
 	max-width: 400px;
 	height: fit-content;
 	margin: auto;
 	padding: 30px 45px;
-	border-radius: 20px;
-	box-shadow: 12px 6px 13px 0px #000;
-	background-color: rgba(255, 255, 255, 1);
-	text-align: center;
-}
-
-.form-box input[type="text"], input[type="password"], input[type="date"], input[type="email"], select {
-	width: 100%;
-	height: 40px;
-	padding: 7px 7px 7px 40px;
-	margin: 10px auto;
-	border: none;
-	border-radius: 50px;
-	color: #444;
-	background-color: var(--light-gray);
 }
 
 .form-box form {
 	text-align: center;
 }
-
-/*.form-box a {*/
-/*	color: var(--main-red);*/
-/*}*/
 
 .form-box h2 {
 	font-weight: bold;
@@ -105,7 +59,7 @@ body {
 }
 
 .form-box .error {
-	color: var(--error-red-light);
+	color: var(--main-red);
 	font-weight: bold;
 }
 
