--- a/4doctors/src/main/webapp/css/main-style.css
+++ b/4doctors/src/main/webapp/css/main-style.css
@@ -1,15 +1,13 @@
+/* color variables */
 :root {
     --main-dark: #002060;
     --main-red: #f06374;
-	--light-gray: rgb( 245, 245, 245);
-	--green: #aefbc0;
-    --error-red: #d00;
-    --error-red-light: #ff8080;
+	--light-gray: #e5e5e5;
 }
 
 * {
 	font-family: Arial, sans-serif !important;
-	color: #444;
+	color: #666;
 }
 
 body {
@@ -20,12 +18,34 @@ body {
 	display: none;
 }
 
+.error {
+    color: var(--main-red);
+}
+
+.message {
+    color: #01b050;
+}
+
+.white-box, table {
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow: 2px 2px 6px 0px #8a8a8a;
+    text-align: center;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.white-box:hover, table:hover {
+    box-shadow: 4px 4px 6px 0px #8a8a8a;;
+}
+
 /* -------------------------------------- HEADER -------------------------------------- */
 header {
-	height: 160px;
+	height: 120px;
 	padding: 24px;
-	background-color: #fff;
-	text-align: center;
+    background-image: url('../media/logo-white.png');
+    background-size: auto 55%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 header img {
@@ -51,6 +71,11 @@ nav {
 	background-color: var(--main-dark);
 }
 
+nav > img {
+    width: 100%;
+    padding: 20px;
+}
+
 nav > a {
 	display: block;
 	height: 60px;
@@ -58,16 +83,14 @@ nav > a {
 	color: #fff;
 }
 
-nav > a:hover, nav > a.selected {
+nav > a:hover {
 	background-color: #000;
 	border-left: 5px solid #fff;
 	text-decoration: none !important;
-	color: var(--main-red);
+	color: var(--main-red) !Important;
 }
 
 nav > a:active {
-	/*box-shadow: inset 0 0 8px #000;
-	background-color: #00b050; */
 	color: #fff !important;
 }
 
@@ -136,6 +159,10 @@ section {
 	height: 100%;
 	padding: 30px 50px 30px 50px;
 	background-color: #fff;
+    background-image: url(../media/doctors-bg.png);
+    background-position: right bottom;
+    background-size: 50%;
+    background-repeat: no-repeat;
 	overflow-y: auto;
 }
 
@@ -158,7 +185,7 @@ a {
 	color: var(--main-red);
 }
 
-a:hover {
+a:hover:not(.button) {
 	color: var(--main-dark);
 	text-decoration: underline;
 }
@@ -169,35 +196,49 @@ a:hover {
 	margin: 5px;
 	padding: 9px 24px;
 	border: none;
-	border-radius: 15px;
+	border-radius: 50px;
+	box-shadow: 2px 2px 6px 0px #8a8a8a;
 	background-color: var(--main-red);
 	letter-spacing: 0.04em;
 	text-align: center;
-	/*font-weight: bold;*/
-	color: #fff;
+	font-weight: bold;
+	color: #fff !important;
 	text-transform: uppercase;
 	outline: none !important;
 	cursor: pointer;
 	transition: background-color 0.3s ease-in-out;
 }
 
-/*.button:hover, button:hover, input[type=submit]:hover, input[type=reset]:hover {*/
-/*	background-color: var(--main-yellow);*/
-/*}*/
+.button:hover, button:hover, input[type=submit]:hover, input[type=reset]:hover {
+	background-color: var(--main-dark);
+}
 
 .button:active, button:active, input[type=submit]:active, input[type=reset]:active {
 	box-shadow: inset 0 0 6px #000;
 }
 
-/* ------------------------------------ TABLE ------------------------------------ */
-thead tr, th {
+.button-2 {
+    background-color: var(--main-dark);
+}
+
+.button-2:hover {
     background-color: var(--main-red);
+}
+
+/* ------------------------------------ TABLE ------------------------------------ */
+table {
+    border-radius: 0;
+    text-align: inherit;
+}
+
+thead tr, th {
+    background-color: var(--main-dark);
     color: #fff;
     font-weight: bold;
 }
 
 tbody tr:nth-child(odd) {
-    background-color: #fff;
+    background-color: var(--light-gray);
 }
 
 td, th {
@@ -219,19 +260,14 @@ input[type="text"], input[type="password"], input[type="date"], input[type="emai
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="email"]:focus, select:focus {
 	outline: none;
-    border: 3px solid var(--green);
+    border: 3px solid var(--main-dark);
     padding: 4px 4px 4px 40px;
     color: var(--main-dark);
 }
 
-/*input[type="text"]:focus::placeholder, input[type="password"]:focus::placeholder, input[type="date"]:focus::placeholder, input[type="email"]:focus::placeholder, select:focus::placeholder {*/
-/*	color: var(--main-green);*/
-/*}*/
-
 input:not([type=date]):invalid:not(:placeholder-shown):not(:focus), input.invalid {
-	border: 3px solid var(--error-red) !important;
-	color: var(--error-red) !important;
-	background-color: /*#ffcbcbvar*/var(--error-red-light);
+	border: 3px solid var(--main-red) !important;
+	color: var(--main-red) !important;
 }
 
 input[name=username], input[name=cf], input[type=password] {
@@ -250,7 +286,7 @@ input[type=password] {
 
 .error {
 	font-weight: bold;
-	color: var(--error-red-light);
+	color: var(--main-red);
 }
 
 /* ------------------------------- ERROR MESSAGE ALERT  --------------------------------- */
@@ -269,12 +305,4 @@ input[type=password] {
 
 #error-message-box p {
 	color: #fff;
-}
-
-#error-message-box h1.error {
-    color: #d00;
-}
-
-#error-message-box h1.message {
-    color: #01b050;
 }
