--- a/4doctors/src/main/webapp/css/prescription-manager-style.css
+++ b/4doctors/src/main/webapp/css/prescription-manager-style.css
@@ -47,7 +47,7 @@
 }
 
 .prescription-item.REJECTED {
-    background-color: var(--error-red-light);
+    background-color: var(--main-red);
 }
 
 @media only screen and (max-width: 992px) {
