Added some comments

--- a/4doctors/src/main/webapp/css/unauthorized-style.css
+++ b/4doctors/src/main/webapp/css/unauthorized-style.css
@@ -24,7 +24,7 @@ a:hover {
 
 #credits {
     color: black;
-    font-size: 10px;
+    font-size: 50%;
     position: absolute;
     bottom: 0;
     right: 0;
