--- a/4doctors/src/main/webapp/css/admin-add-medicine-style.css
+++ b/4doctors/src/main/webapp/css/admin-add-medicine-style.css
@@ -1,5 +1,5 @@
-* {
-    color: #fff;
+section {
+    background-color: var(--light-gray);
 }
 
 .form-box {
@@ -9,8 +9,8 @@
     margin: auto;
     padding: 25px;
     border-radius: 30px;
-    box-shadow: 12px 6px 13px 0px #000;
-    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 6px #8a8a8a;
+    /*background-color: rgba(0, 0, 0, 0.5);*/
     text-align: center;
 }
 .form-box form {
@@ -30,7 +30,7 @@
 }
 
 .form-box .error {
-    color: var(--error-red-light);
+    color: var(--main-red);
     font-weight: bold;
 }
 
