--- a/4doctors/src/main/webapp/css/login-registration-style.css
+++ b/4doctors/src/main/webapp/css/login-registration-style.css
@@ -13,6 +13,10 @@ body {
 	background-size: cover;
 }
 
+button, .button, input[type=submit], input[type=button] {
+    min-width: 150px;
+}
+
 /* Place text in the middle of the image */
 .hero-text {
 	text-align: center;
@@ -69,6 +73,7 @@ body {
 	padding: 7px;
 	margin: 10px auto;
 	border: none;
+	color: #fff;
 }
 
 @media only screen and (max-width: 600px) {
