--- a/4doctors/src/main/webapp/css/unauthorized-style.css
+++ b/4doctors/src/main/webapp/css/unauthorized-style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(-45deg, rgba(255,153,0,1) 0%, rgba(255,255,255,1) 50%, rgba(255,153,0,1) 100%);
+    background: var(--light-gray);
 }
 
 #unauthorized_img {
